@@ -1,5 +1,11 @@
 2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	*operation/incidents_simple/incidents.php,
+	operation/side_menu.php: Fixed an error in ACL disallowing users to
+	create incidents when they have flag IW.
+
+2012-03-06 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* operation/incidents/incident_detail.php: Fixed a bug related to
 	ACL that disabled the incident edition for incident owners.
 
